samples/_failures_safe/1761313802_a0bb26_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_13a50f8b.c: In function ‘lexer_next_token’:
./samples/SAFE/__tmp_13a50f8b.c:172:29: error: expected ‘)’ at end of input
  172 |         if (is_operator_char
      |            ~                ^
      |                             )
./samples/SAFE/__tmp_13a50f8b.c:172:9: error: expected declaration or statement at end of input
  172 |         if (is_operator_char
      |         ^~
./samples/SAFE/__tmp_13a50f8b.c:172:9: error: expected declaration or statement at end of input
